--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     environment:
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://keycloak:8080/realms/microservices-realm
       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_0_ID: product-service
-      SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_0_URI: http://product-service:8081
+      SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_0_URI: https://product-service:8081
       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_0_PREDICATES_0: Path=/products/**
       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_ID: order-service
-      SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_URI: http://order-service:8082
+      SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_URI: https://order-service:8082
       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_PREDICATES_0: Path=/orders/**
     ports:
       - "8085:8085"
@@ -40,6 +40,7 @@ services:
       context: ./order-service
     container_name: order-service
     environment:
+      PRODUCT_SERVICE_BASE_URL: https://product-service:8081
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://keycloak:8080/realms/microservices-realm
     ports:
       - "8082:8082"
@@ -52,6 +53,8 @@ services:
   react-app:
     build:
       context: ./react-app
+      args:
+        REACT_APP_KEYCLOAK_URL: http://keycloak:8080
     container_name: react-app
     ports:
       - "3000:80"
@@ -91,6 +94,7 @@ services:
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: keycloak
+      KC_HOSTNAME: keycloak
       KC_HOSTNAME_STRICT: false
       KC_HTTP_ENABLED: true
       KC_HEALTH_ENABLED: true
