--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -18,11 +18,18 @@ spring:
           routes:
 
             - id: product-service
-              uri: http://localhost:8081
+              uri: https://localhost:8081
               predicates:
                 - Path=/products/**
 
             - id: order-service
-              uri: http://localhost:8082
+              uri: https://localhost:8082
               predicates:
                 - Path=/orders/**
+
+gateway:
+  mtls:
+    key-store: classpath:certs/client.p12
+    key-store-password: changeit
+    trust-store: classpath:certs/truststore.p12
+    trust-store-password: changeit
