--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 server:
   port: 8082
+  ssl:
+    key-store: classpath:certs/order-service.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    key-alias: order-service
 
 spring:
   security:
@@ -7,3 +12,13 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/microservices-realm
+
+product-service:
+  base-url: ${PRODUCT_SERVICE_BASE_URL:https://localhost:8081}
+  ssl:
+    key-store: classpath:certs/client.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    trust-store: classpath:certs/truststore.p12
+    trust-store-password: changeit
+    trust-store-type: PKCS12
