--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,5 +1,14 @@
 server:
   port: 8081
+  ssl:
+    key-store: classpath:certs/product-service.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    key-alias: product-service
+    trust-store: classpath:certs/truststore.p12
+    trust-store-password: changeit
+    trust-store-type: PKCS12
+    client-auth: need
 
 spring:
   application:
