--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=DevSecOpsDevoir
 sonar.projectName=DevSecOpsDevoir
+sonar.organization=zakaria-farahi
 sonar.sourceEncoding=UTF-8
 sonar.sources=gateway/src,product-service/src,order-service/src,react-app/src
 sonar.exclusions=**/node_modules/**,**/target/**,**/build/**,**/.idea/**,**/*.p12
