--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_ID: order-service
       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_URI: https://order-service:8082
       SPRING_CLOUD_GATEWAY_SERVER_WEBFLUX_ROUTES_1_PREDICATES_0: Path=/orders/**
+      GATEWAY_MTLS_KEYSTORE_PASSWORD: ${GATEWAY_MTLS_KEYSTORE_PASSWORD}
+      GATEWAY_MTLS_TRUSTSTORE_PASSWORD: ${GATEWAY_MTLS_TRUSTSTORE_PASSWORD}
     ports:
       - "8085:8085"
     depends_on:
@@ -27,6 +29,8 @@ services:
     container_name: product-service
     environment:
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://keycloak:8080/realms/microservices-realm
+      PRODUCT_SERVICE_KEYSTORE_PASSWORD: ${PRODUCT_SERVICE_KEYSTORE_PASSWORD}
+      PRODUCT_SERVICE_TRUSTSTORE_PASSWORD: ${PRODUCT_SERVICE_TRUSTSTORE_PASSWORD}
     ports:
       - "8081:8081"
     depends_on:
@@ -42,6 +46,9 @@ services:
     environment:
       PRODUCT_SERVICE_BASE_URL: https://product-service:8081
       SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI: http://keycloak:8080/realms/microservices-realm
+      ORDER_SERVICE_KEYSTORE_PASSWORD: ${ORDER_SERVICE_KEYSTORE_PASSWORD}
+      ORDER_SERVICE_CLIENT_KEYSTORE_PASSWORD: ${ORDER_SERVICE_CLIENT_KEYSTORE_PASSWORD}
+      ORDER_SERVICE_TRUSTSTORE_PASSWORD: ${ORDER_SERVICE_TRUSTSTORE_PASSWORD}
     ports:
       - "8082:8082"
     depends_on:
