--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8082
   ssl:
     key-store: classpath:certs/order-service.p12
-    key-store-password: changeit
+    key-store-password: ${ORDER_SERVICE_KEYSTORE_PASSWORD}
     key-store-type: PKCS12
     key-alias: order-service
 
@@ -17,8 +17,8 @@ product-service:
   base-url: ${PRODUCT_SERVICE_BASE_URL:https://localhost:8081}
   ssl:
     key-store: classpath:certs/client.p12
-    key-store-password: changeit
+    key-store-password: ${ORDER_SERVICE_CLIENT_KEYSTORE_PASSWORD}
     key-store-type: PKCS12
     trust-store: classpath:certs/truststore.p12
-    trust-store-password: changeit
+    trust-store-password: ${ORDER_SERVICE_TRUSTSTORE_PASSWORD}
     trust-store-type: PKCS12
