--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,5 +6,4 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=gateway/src,product-service/src,order-service/src,react-app/src
 sonar.exclusions=**/node_modules/**,**/target/**,**/build/**,**/.idea/**,**/*.p12
 sonar.java.binaries=gateway/target/classes,product-service/target/classes,order-service/target/classes
-sonar.coverage.jacoco.xmlReportPaths=gateway/target/site/jacoco/jacoco.xml,product-service/target/site/jacoco/jacoco.xml,order-service/target/site/jacoco/jacoco.xml
-sonar.javascript.lcov.reportPaths=react-app/coverage/lcov.info
+sonar.coverage.exclusions=**/*.java,**/*.js,**/*.jsx
