--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,7 @@ name: CI
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main, master]
   pull_request:
 
 jobs:
@@ -13,43 +11,33 @@ jobs:
     permissions:
       contents: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          submodules: recursive
-
       - name: Run gitleaks
         uses: gitleaks/gitleaks-action@v2
         with:
           args: --source . --redact
 
   sca:
+    needs: secret-scan # Only run if no secrets found
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: recursive
-
-      - name: Set up Java
+      - uses: actions/checkout@v4
+      - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
-
       - name: OWASP Dependency-Check
-        uses: dependency-check/Dependency-Check_Action@main
+        uses: dependency-check/Dependency-Check_Action@v1.1.0 # Fixed version
         env:
           NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
           JAVA_HOME: /opt/jdk 
         with:
           project: DevSecOpsDevoir
           path: .
-          format: "HTML,JSON"
+          format: "HTML"
           out: dependency-check-report
           args: >-
             --failOnCVSS 7
@@ -57,54 +45,33 @@ jobs:
             --scan product-service
             --scan order-service
             --scan react-app
-
-      - name: Upload dependency-check report
+      - name: Upload Report
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
           path: dependency-check-report
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: npm
-          cache-dependency-path: react-app/package-lock.json
-
-      - name: npm audit (production)
-        run: npm audit --omit=dev --audit-level=high
-        working-directory: react-app
-
   sast:
+    needs: secret-scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          submodules: recursive
-
-      - name: Set up Java
+      - name: Set up Java 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
           cache: maven
-
-      - name: Build gateway
-        run: mvn -q -DskipTests package
-        working-directory: gateway
-
-      - name: Build product-service
-        run: mvn -q -DskipTests package
-        working-directory: product-service
-
-      - name: Build order-service
-        run: mvn -q -DskipTests package
-        working-directory: order-service
+      
+      # Build all modules to provide binaries for a better Sonar scan
+      - name: Build Microservices
+        run: |
+          mvn -q -DskipTests clean package -pl gateway,product-service,order-service -am
 
       - name: SonarCloud scan
-        uses: SonarSource/sonarcloud-github-action@v2
+        uses: SonarSource/sonarcloud-github-action@v3 # Upgraded version
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
