--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [main, master]
+    branches:
+      - main
+      - master
   pull_request:
 
 jobs:
@@ -11,24 +13,34 @@ jobs:
     permissions:
       contents: read
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          submodules: recursive
+
       - name: Run gitleaks
         uses: gitleaks/gitleaks-action@v2
         with:
           args: --source . --redact
 
   sca:
-    needs: secret-scan # Only run if no secrets found
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Java 21
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
+
       - name: OWASP Dependency-Check
         uses: dependency-check/Dependency-Check_Action@main
         env:
@@ -45,33 +57,54 @@ jobs:
             --scan product-service
             --scan order-service
             --scan react-app
-      - name: Upload Report
+
+      - name: Upload dependency-check report
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
           path: dependency-check-report
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: react-app/package-lock.json
+
+      - name: npm audit (production)
+        run: npm audit --omit=dev --audit-level=high
+        working-directory: react-app
+
   sast:
-    needs: secret-scan
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up Java 21
+          submodules: recursive
+
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "21"
           cache: maven
-      
-      # Build all modules to provide binaries for a better Sonar scan
-      - name: Build Microservices
-        run: |
-          mvn -q -DskipTests clean package -pl gateway,product-service,order-service -am
+
+      - name: Build gateway
+        run: mvn -q -DskipTests package
+        working-directory: gateway
+
+      - name: Build product-service
+        run: mvn -q -DskipTests package
+        working-directory: product-service
+
+      - name: Build order-service
+        run: mvn -q -DskipTests package
+        working-directory: order-service
 
       - name: SonarCloud scan
-        uses: SonarSource/sonarcloud-github-action@v3 # Upgraded version
+        uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
