--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
             --scan react-app
 
       - name: Upload dependency-check report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: dependency-check-report
