--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
     "keycloak-js": "^26.2.1",
+    "nth-check": "^2.1.1",
     "prop-types": "^15.8.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
