--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -4,7 +4,7 @@ COPY pom.xml .
 COPY src ./src
 RUN mvn -q -DskipTests package
 
-FROM eclipse-temurin:21-jre
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 RUN useradd -r -u 10001 appuser
 COPY --from=build /workspace/target/*.jar /app/app.jar
