--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -6,7 +6,7 @@ RUN mvn -q -DskipTests package
 
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-RUN useradd -r -u 10001 appuser
+RUN adduser -D -u 10001 appuser
 COPY --from=build /workspace/target/*.jar /app/app.jar
 USER appuser
 EXPOSE 8082
