skip unfixed pb

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -130,6 +130,8 @@ jobs:
           format: "table"
           exit-code: "1"
           severity: "HIGH,CRITICAL"
+          ignore-unfixed: true
+          trivyignore: .trivyignore
 
   sast:
     runs-on: ubuntu-latest
