--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,7 +131,7 @@ jobs:
           exit-code: "1"
           severity: "HIGH,CRITICAL"
           ignore-unfixed: true
-          trivyignore: .trivyignore
+          trivyignores: .trivyignore
 
   sast:
     runs-on: ubuntu-latest
